hard-gists/9680901/run.log
=== Docker Run Log for 9680901 ===
Started at: Mi 29. Okt 18:30:30 CET 2025

[2025-10-29 18:30:31] START: Running container for 9680901
[2025-10-29 18:30:31] SUCCESS: Container 88436e90543d867a43df92e90477c6db174ff25e2eaad7623664f9b24fbbaf8c started for 9680901
=== Container logs for 9680901 ===
  File "/snippet.py", line 54
    print 'Authentication failed!'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9680901 ===
[2025-10-29 18:30:33] INFO: Container 88436e90543d867a43df92e90477c6db174ff25e2eaad7623664f9b24fbbaf8c has stopped
